@@ -550,7 +550,6 @@ Grouped in options:\
 [Cicero](https://www.cicero.de) -
 [Der Spiegel (link to archive.is)](https://www.spiegel.de) -
 [Der Tagesspiegel (link to archive.is)](https://www.tagesspiegel.de) -
-[Deutsches Ärzteblatt](https://www.aerzteblatt.de) -
 [Die Zeit (link to archive.is)](https://www.zeit.de) -
 [Frankfurter Allgemeine Zeitung](https://www.faz.net) -
 [Freie Presse](https://www.freiepresse.de) -
