@@ -48,7 +48,6 @@
     "*://*.adage.com/*",
     "*://*.adelaidenow.com.au/*",
     "*://*.adweek.com/*",
-    "*://*.aerzteblatt.de/*",
     "*://*.aerztezeitung.de/*",
     "*://*.afr.com/*",
     "*://*.aftonbladet.se/*",
